[package]
name = "geometry"
description = "Procedural geometry generation library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "geometry"

[dependencies]
macros = { version = "0.1.0", path = "macros" }

[dev-dependencies]
winit = "0.27"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
pollster = "0.2"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"
bevy = "0.9.1"
rand = "0.8.5"

[dev-dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[[example]]
name = "hello_house"

[[example]]
name = "wpu_renderer"
